@@ -17,6 +17,8 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
   Changed enable_profile() to discard the time spent since
     profile was disabled.
 
+  Added license, homepage, bugtracker, repository and MailingList
+    resources to META.yml thanks to Michael G Schwern.
   Added nytprofcg utility to generate callgrind data for
     viewing via Kcachegrind, thanks to Chia-liang Kao.
 
